@@ -195,7 +195,7 @@ let SOLOVAY_PROFORMA_EQ = prove
     SPEC_TAC(`vs:(real^N)list`,`vs:(real^N)list`) THEN
     SPEC_TAC(`as:(real)list`,`as:(real)list`) THEN
     REPEAT LIST_INDUCT_TAC THEN REWRITE_TAC[LENGTH; NOT_SUC] THEN
-    REWRITE_TAC[ALL; ITLIST2; DOT_RZERO; EQ_SUC] THEN
+    REWRITE_TAC[ALL; ITLIST2; DOT_RZERO; SUC_INJ] THEN
     ASM_SIMP_TAC[DOT_RADD] THEN
     REWRITE_TAC[REAL_ADD_RID; DOT_RMUL] THEN
     SIMP_TAC[orthogonal] THEN REWRITE_TAC[REAL_MUL_RZERO];
