@@ -300,7 +300,7 @@ let TERMDIFF_LEMMA3 = prove(
   REWRITE_TAC[ADD_CLAUSES] THEN STRIP_TAC THEN BETA_TAC THEN
   UNDISCH_TAC `q < (SUC d)` THEN
   DISCH_THEN(X_CHOOSE_THEN `e:num` MP_TAC o MATCH_MP LESS_ADD_1) THEN
-  REWRITE_TAC[GSYM ADD1; ADD_CLAUSES; EQ_SUC] THEN
+  REWRITE_TAC[GSYM ADD1; ADD_CLAUSES; SUC_INJ] THEN
   DISCH_THEN SUBST_ALL_TAC THEN REWRITE_TAC[POW_ADD] THEN
   ONCE_REWRITE_TAC[ADD_SYM] THEN REWRITE_TAC[ADD_SUB] THEN
   REWRITE_TAC[ABS_MUL] THEN MATCH_MP_TAC REAL_LE_MUL2V THEN
